# payout-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/: manage.py  pytest.ini
src/apps/payouts/: admin.py  apps.py  constants.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/apps/payouts/migrations/: 0001_initial.py
src/apps/payouts/tests/: conftest.py  factories.py  test_api.py
src/config/: __init__.py  celery.py  urls.py  wsgi.py
src/config/settings/: __init__.py  base.py
src/core/: models.py
